<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbarcolor"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.police.org.tpcs.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/lightgray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/toolbarcolor2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="TPCS"
                android:textColor="#fff"
                android:textSize="60sp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="SIGN IN"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"

                />

        </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardCornerRadius="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="-100dp">

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"

                    android:layout_marginRight="30dp"

                    android:drawableLeft="@drawable/ic_perm_identity_black_24dp"

                    android:drawablePadding="10dp"
                    android:hint="@string/user_id"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="20dp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:drawableLeft="@drawable/loginkey"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="16dp" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:focusable="true"
                android:onClick="loginClick"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="20dp" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="regClick"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/sign_up_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtforget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:layout_marginTop="-30dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:onClick="forgotClick"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:text="@string/forget_password"
                android:textSize="16dp" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>