<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.police.org.tpcs.DashboardActivity"
    android:orientation="vertical"
    android:id="@+id/drawerlayout"
    android:background="@color/lightgray">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clipToPadding="false">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/toolbarcolor">

            <include layout="@layout/toolbar" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="end">
            <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
                android:text="Search"
                android:padding="5dp"
                android:textSize="17sp"
                android:onClick="searchClick"
                android:textColor="#ffff"/>
            <Button
                android:id="@+id/btnsearch"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:onClick="searchClick"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_search_black_24dp" />
</LinearLayout>

        </android.support.design.widget.AppBarLayout>



     <LinearLayout
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >


        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:clipToPadding="false"
            >


            <android.support.v7.widget.CardView

                android:layout_height="140dp"
                android:layout_width="100dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:id="@+id/dashcard_challan"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/ic_add_circle_outline_black_24dp"
                        android:padding="10dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/circlebackground"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:textColor="#000"
                        android:layout_marginTop="3dp"
                        android:text="@string/dash_challan"
                        />

                </LinearLayout>



            </android.support.v7.widget.CardView>





            <android.support.v7.widget.CardView

                android:layout_height="140dp"
                android:layout_width="100dp"
                android:layout_margin="10dp"

                android:id="@+id/dashcard_regvihical"
                android:clickable="true"
                app:cardCornerRadius="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/circlebackgroundaccent"
                        android:padding="10dp"
                        android:layout_marginTop="3dp"

                        app:srcCompat="@drawable/ic_time_to_leave_black_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resgistred_vehicle"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="100dp"
                android:layout_height="140dp"
                app:cardCornerRadius="10dp"

                android:layout_margin="10dp"
                android:id="@+id/dashcard_traffic_sttcs">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"

                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/circlebackgroundgreen"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_compare_arrows_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/traffic_statistics"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="12sp"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:layout_marginTop="15dp"
            android:gravity="center">




            <android.support.v7.widget.CardView
                android:id="@+id/dashcard_chalan_sttics"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/circlebackgroundyello"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_statistcs_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                     android:textSize="12sp"
                        android:text="@string/challan_statistics"
                        android:textColor="#000"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:textStyle="bold" />



                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dashcard_incedents"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/ic_person_pin_circle_black_24dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/circlebrown"
                        android:padding="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Check In"
                        android:textColor="#000"
                        android:layout_marginTop="3dp"
                        android:textSize="12dp"
                        android:textStyle="bold" />




                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/dashcard_account"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/ic_account_circle_black_24dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/circleprimary"
                        android:padding="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dash_profile"
                        android:textSize="12sp"
                        android:layout_marginTop="3dp"
                        android:textColor="#000"
                        android:textStyle="bold" />




                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
     </LinearLayout>

    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/naveview"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/tpcs_menu"
        app:headerLayout="@layout/nav_header"
        >

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
